5.1.3/controller.md
|key|value|important|
|---|---|---|
|configStorePath|${ROCKETMQ_HOME}/controller/controller.properties||
|controllerDLegerGroup|||
|controllerDLegerPeers|||
|controllerDLegerSelfId|||
|controllerRequestThreadPoolQueueCapacity|50000||
|controllerStorePath|${ROCKETMQ_HOME}/DledgerController||
|controllerThreadPoolNums|16||
|enableElectUncleanMaster|false||
|isProcessReadEvent|false||
|mappedFileSize|1073741824||
|metricGrpcExporterIntervalInMills|60000||
|metricGrpcExporterTimeOutInMills|3000||
|metricLoggingExporterIntervalInMills|10000||
|metricsExporterType|DISABLE||
|metricsGrpcExporterHeader|||
|metricsGrpcExporterTarget|||
|metricsInDelta|false||
|metricsLabel|||
|metricsPromExporterHost|||
|metricsPromExporterPort|5557||
|notifyBrokerRoleChanged|true||
|rocketmqHome|||
|scanInactiveMasterInterval|5000||
|scanNotActiveBrokerInterval|5000||
