5.2.0/controller.md
|key|value|important|
|---|---|---|
|configBlackList|configBlackList;configStorePath||
|configStorePath|${user.home}/controller/controller.properties||
|controllerDLegerGroup|||
|controllerDLegerPeers|||
|controllerDLegerSelfId|||
|controllerRequestThreadPoolQueueCapacity|50000||
|controllerStorePath|||
|controllerThreadPoolNums|16||
|controllerType|DLedger||
|electMasterMaxRetryCount|3||
|enableElectUncleanMaster|false||
|jRaftControllerRPCAddr|localhost:9770,localhost:9771,localhost:9772||
|jRaftElectionTimeoutMs|1000||
|jRaftGroupId|jRaft-Controller||
|jRaftInitConf|localhost:9880,localhost:9881,localhost:9882||
|jRaftScanWaitTimeoutMs|1000||
|jRaftServerId|localhost:9880||
|jRaftSnapshotIntervalSecs|3600||
|mappedFileSize|1073741824||
|metricGrpcExporterIntervalInMills|60000||
|metricGrpcExporterTimeOutInMills|3000||
|metricLoggingExporterIntervalInMills|10000||
|metricsExporterType|DISABLE||
|metricsGrpcExporterHeader|||
|metricsGrpcExporterTarget|||
|metricsInDelta|false||
|metricsLabel|||
|metricsPromExporterHost|||
|metricsPromExporterPort|5557||
|notifyBrokerRoleChanged|true||
|processReadEvent|false||
|rocketmqHome|${ROCKETMQ_HOME}||
|scanInactiveMasterInterval|5000||
|scanNotActiveBrokerInterval|5000||
